# thesis-master

./: .gitignore  README.md  latexmkrc  main.tex  outline.tex  presentation.tex  pyproject.toml  thesis.bib
chap/: abs.tex  ack.tex  chap1.tex  chap2.tex  chap3.1.tex  chap3.tex  chap4.tex  copy.tex  encl1.tex  origin.tex
lib/table/: ETCCDI.tex  Premium.tex  corr.tex  desc.tex  did1.tex  did2.tex  het_cov.tex  het_geo.tex  het_rur.tex  het_time.tex  ols.tex  premiumdid.tex  renew.tex  robust.tex  var.tex
src/: 100.ipynb  analysis.py  desc.py  het.py  het_new.py  img-gen.py  main copy.ipynb  main.ipynb  main.sql  randomtest.py  robust.py  robust2.py  sub.ipynb  subsub.py  temp.py  tosql.py  tosql2.py  ver1.sql  ver2.sql  ver3.sql
